gogs/gogs-postgres.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gogs-postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30010
  selector:
    app: gogs-postgres
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gogs-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gogs-postgres
    spec:
      containers:
      - name: postgres
        image: arm32v7/postgres:10.2
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
            claimName: gogs-db-pvc
